[gd_scene load_steps=6 format=3 uid="uid://2r8dwe0vb3p2"]

[ext_resource type="Script" path="res://drawer.gd" id="1_oxgog"]
[ext_resource type="Script" path="res://TileMap.gd" id="4_8kopw"]
[ext_resource type="Texture2D" uid="uid://c4coo83qukb42" path="res://60x60_white_square.png" id="4_57iap"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t6s4y"]
texture = ExtResource("4_57iap")
texture_region_size = Vector2i(60, 60)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/1 = 1
0:0/1/modulate = Color(0, 0.396078, 0.862745, 1)

[sub_resource type="TileSet" id="TileSet_ruhv2"]
tile_size = Vector2i(60, 60)
sources/0 = SubResource("TileSetAtlasSource_t6s4y")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_oxgog")

[node name="text_box" type="TextEdit" parent="."]
offset_left = 64.0
offset_top = 549.0
offset_right = 488.0
offset_bottom = 607.0

[node name="number_slider" type="HSlider" parent="."]
offset_left = 714.0
offset_top = 551.0
offset_right = 1132.0
offset_bottom = 602.0
ticks_on_borders = true

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(42, 23)
tile_set = SubResource("TileSet_ruhv2")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 5, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 327685, 0, 0, 393221, 0, 0, 458757, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 7, 0, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 0, 0, 327687, 0, 0, 393223, 0, 0, 458759, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 458760, 0, 0, 9, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 262153, 0, 0, 327689, 0, 0, 393225, 0, 0, 458761, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 262156, 0, 0, 327692, 0, 0, 393228, 0, 0, 458764, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 458765, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 262158, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 15, 0, 0, 16, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0, 262159, 0, 0, 327695, 0, 0, 393231, 0, 0, 458767, 0, 0, 65552, 0, 0, 131088, 0, 0, 196624, 0, 0, 262160, 0, 0, 327696, 0, 0, 393232, 0, 0, 458768, 0, 0, 17, 0, 0, 65553, 0, 0, 131089, 0, 0, 196625, 0, 0, 262161, 0, 0, 327697, 0, 0, 393233, 0, 0, 458769, 0, 0)
script = ExtResource("4_8kopw")

[node name="slider_display" type="Label" parent="."]
offset_left = 920.0
offset_top = 502.0
offset_right = 960.0
offset_bottom = 557.0
theme_override_font_sizes/font_size = 40
text = "0"

[connection signal="text_changed" from="text_box" to="." method="_on_text_edit_text_changed"]
[connection signal="drag_ended" from="number_slider" to="." method="_on_h_slider_drag_ended"]
